# LoveTerm

./: CMakeLists.txt  README.md  main.cpp
src/: Logger.cpp  Logger.h  loveterm.cpp  loveterm.h  main.cpp
src/css/: main.css
