cmake_minimum_required(VERSION 3.12)
project(LoveTerm)

set(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK_CFLAGS_OTHER})

add_executable(LoveTerm main.cpp)

TARGET_LINK_LIBRARIES(LoveTerm ${GTK_LIBRARIES})
