cmake_minimum_required(VERSION 3.12)
project(LoveTerm)

set(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK_CFLAGS_OTHER})

PKG_CHECK_MODULES(VTE REQUIRED vte-2.91)
INCLUDE_DIRECTORIES(${VTE_INCLUDE_DIRS})
LINK_DIRECTORIES(${VTE_LIBRARY_DIRS})

ADD_DEFINITIONS(${VTE_CFLAGS_OTHER})

file(COPY src/css DESTINATION ${CMAKE_BINARY_DIR})

add_executable(LoveTerm src/loveterm.cpp src/Logger.cpp src/loveterm.h src/Logger.h)

TARGET_LINK_LIBRARIES(LoveTerm ${GTK_LIBRARIES})
TARGET_LINK_LIBRARIES(LoveTerm ${VTE_LIBRARIES})